fix node title alignment issues

--- a/less/editor.less
+++ b/less/editor.less
@@ -180,7 +180,7 @@ div.graph-node {
 		  span {
 			  margin: 0;
 			  padding: 0 20px 2px 10px;
-			  line-height: @vp-node-text-size;
+			  //line-height: @vp-node-text-size;
 			  font-size: @vp-node-text-size;
 			  height: @device-header-height;
 		  }
@@ -333,7 +333,7 @@ div.graph-node {
 		}
 
 	}
-  	input.node-title-input {	// TODO: move Application.prototype.onNodeHeaderDblClicked event handler to UI
+  	input.node-title-input {
 	  	color: #000 !important;
   		font-size: @vp-node-text-size;
 	}
@@ -736,6 +736,10 @@ div.graph-node.p_inline .p_header.p_inline {
 	  height: 18px;
 	}
   }
+	span.p_title {
+		line-height: 32px;
+		vertical-align: top;
+	}
 }
 
 div.ace_content {text-align: left;}
